{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 140,
  "lineage": "2983a4e0-2e10-0e74-133f-9c87eda0da39",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zubis-altschool-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:490256896278:internet-gateway/igw-0a600368832709ba3",
            "id": "igw-0a600368832709ba3",
            "owner_id": "490256896278",
            "tags": {
              "Name": "zubis-altschool-project-IG"
            },
            "tags_all": {
              "Name": "zubis-altschool-project-IG"
            },
            "vpc_id": "vpc-05671743701ffa9a7"
          },
          "dependencies": [
            "aws_vpc.zubis-altschool-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "zubis-altschool-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "zubis-altschool-LB-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "zubis-altschool-LB-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "zubis-altschool-LB-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:490256896278:targetgroup/zubis-altschool-LB-target-group/cdb702632b36ecb0",
            "arn_suffix": "targetgroup/zubis-altschool-LB-target-group/cdb702632b36ecb0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:490256896278:targetgroup/zubis-altschool-LB-target-group/cdb702632b36ecb0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "zubis-altschool-LB-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05671743701ffa9a7"
          },
          "dependencies": [
            "aws_vpc.zubis-altschool-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "zubis-altschool-TG-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "zubis-altschool-TG-attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "zubis-altschool-TG-attachment3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "zubis-altschool-project-ACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:490256896278:network-acl/acl-00c2762b797bf3345",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00c2762b797bf3345",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "490256896278",
            "subnet_ids": [
              "subnet-03700ca8222e4f3c2",
              "subnet-072ff0a661bb54b3a"
            ],
            "tags": {
              "Name": "zubis-net-ACL"
            },
            "tags_all": {
              "Name": "zubis-net-ACL"
            },
            "vpc_id": "vpc-05671743701ffa9a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.zubis-altschool-subnet1",
            "aws_subnet.zubis-altschool-subnet2",
            "aws_vpc.zubis-altschool-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "zubis-altschool-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:490256896278:route-table/rtb-0feef93d41b9a21b3",
            "id": "rtb-0feef93d41b9a21b3",
            "owner_id": "490256896278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a600368832709ba3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zubis-altschool-project-RT"
            },
            "tags_all": {
              "Name": "zubis-altschool-project-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05671743701ffa9a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.zubis-altschool-IG",
            "aws_vpc.zubis-altschool-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "zubis-RT-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f48b179f217c4ee4",
            "route_table_id": "rtb-0feef93d41b9a21b3",
            "subnet_id": "subnet-03700ca8222e4f3c2"
          },
          "dependencies": [
            "aws_internet_gateway.zubis-altschool-IG",
            "aws_route_table.zubis-altschool-RT",
            "aws_subnet.zubis-altschool-subnet1",
            "aws_vpc.zubis-altschool-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "zubis-RT-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eee42cfd318de53f",
            "route_table_id": "rtb-0feef93d41b9a21b3",
            "subnet_id": "subnet-072ff0a661bb54b3a"
          },
          "dependencies": [
            "aws_route_table.zubis-altschool-RT",
            "aws_subnet.zubis-altschool-subnet2",
            "aws_vpc.zubis-altschool-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zubis-instance-SG-allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:490256896278:security-group/sg-0e5331b494c59a6e4",
            "description": "Allow SSH, HTTP and HTTPS inbound instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5331b494c59a6e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071f9532c6fdf84f8"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071f9532c6fdf84f8"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "zubis-instance-SG-allow_tls",
            "name_prefix": "",
            "owner_id": "490256896278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zubis-Altschool-instance-SG"
            },
            "tags_all": {
              "Name": "zubis-Altschool-instance-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05671743701ffa9a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.zubis-load-balancer-SG-allow_tls",
            "aws_vpc.zubis-altschool-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zubis-load-balancer-SG-allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:490256896278:security-group/sg-071f9532c6fdf84f8",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-071f9532c6fdf84f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "zubis-load-balancer-SG-allow_tls",
            "name_prefix": "",
            "owner_id": "490256896278",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05671743701ffa9a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.zubis-altschool-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zubis-altschool-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:490256896278:subnet/subnet-03700ca8222e4f3c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03700ca8222e4f3c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "490256896278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zubis-altschool-subnet1"
            },
            "tags_all": {
              "Name": "zubis-altschool-subnet1"
            },
            "vpc_id": "vpc-05671743701ffa9a7"
          },
          "dependencies": [
            "aws_vpc.zubis-altschool-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zubis-altschool-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:490256896278:subnet/subnet-072ff0a661bb54b3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072ff0a661bb54b3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "490256896278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zubis-altschool-subnet2"
            },
            "tags_all": {
              "Name": "zubis-altschool-subnet2"
            },
            "vpc_id": "vpc-05671743701ffa9a7"
          },
          "dependencies": [
            "aws_vpc.zubis-altschool-project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zubis-altschool-project-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:490256896278:vpc/vpc-05671743701ffa9a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba0a3e80c3ec8d40",
            "default_route_table_id": "rtb-02dd55ee0d4ef7f67",
            "default_security_group_id": "sg-044f1502ec19b431f",
            "dhcp_options_id": "dopt-0500292c6de4b1291",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05671743701ffa9a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02dd55ee0d4ef7f67",
            "owner_id": "490256896278",
            "tags": {
              "Name": "zubis-altschool-project-vpc"
            },
            "tags_all": {
              "Name": "zubis-altschool-project-vpc"
            }
          }
        }
      ]
    }
  ]
}